<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_fg_gd_nm"/>

    <EditText
        android:id="@+id/et_frag_gd_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:hint="@string/et_fg_gd_nm_hint"
        android:maxLines="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_fg_gd_txt"/>


</LinearLayout>