<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal">

    <TextView
        android:paddingTop="81dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_fg_gd_pw"
        android:id="@+id/textView" />

    <EditText
        android:id="@+id/et_frag_gd_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:hint="@string/et_fg_gd_pw_hint"
        android:maxLines="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_fg_gd_pw_security"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/sp_fg_gd_sl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="10dp"
        android:entries="@array/sp_fg_gd_pw_list" />


    <EditText
        android:id="@+id/et_fg_gd_ans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_fg_gd_txt"/>

</LinearLayout>